# ipc_uds

./: .gitignore  CODE_QUALITY_REPORT.md  README.md
client/: CMakeLists.txt
client/client_app/: main.cpp
common/: CMakeLists.txt
common/thread_pool/: CMakeLists.txt  README.md
common/thread_pool/include/thread_pool/: ThreadPool.hpp
common/thread_pool/src/: ThreadPool.cpp
common/utest/: CMakeLists.txt  README.md  test_thread_pool.cpp
server/: CMakeLists.txt  run_all_tests.sh
server/app/: CMakeLists.txt  main.cpp
server/ipc_sync/: CMakeLists.txt
server/ipc_sync/include/ipc_sync/: ByteBuffer.hpp  CalculatorClient.hpp  Channel.hpp  Protocol.hpp  TimeClient.hpp
server/ipc_sync/src/: ByteBuffer.cpp  CalculatorClient.cpp  Channel.cpp  TimeClient.cpp
server/server_core/: CMakeLists.txt
server/server_core/include/: IService.hpp  ServiceManager.hpp  UDSServer.hpp
server/server_core/src/: ServiceManager.cpp  UDSServer.cpp
server/services/: CMakeLists.txt
server/services/include/: CalculatorService.hpp  TimeService.hpp
server/services/src/: CalculatorService.cpp  TimeService.cpp
server/utest/: CMakeLists.txt  README.md  test_byte_buffer.cpp  test_calculator_service.cpp  test_channel.cpp  test_integration.cpp  test_multithreading.cpp  test_protocol.cpp  test_service_manager.cpp  test_time_service.cpp
